# fast-near-duplicate-matching

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
sample_data/: query.jsonl
scripts/: mmap_dataset.py  prepare_pythia.py
src/: lib.rs  main.rs
